src/styles/main.css
@import 'modern-normalize';

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

img {
  display: block;
}

button {
  cursor: pointer;
}

.container {
  width: 100%;
  max-width: 1440px;
  height: 100vh;
  margin: 0 auto;
  padding: 62px;
}

.tab-style {
  background-color: #000000;
}

.tab-list {
  overflow-x: hidden;
  overflow-y: hidden;
  height: 100px;
  
  display: flex;
  gap: 10px;
  align-items: center;
  text-align: center;
}

.tab-item {
  height: 48px;
  min-width: 100px;
  display: flex;
  align-items: center;
  justify-content: center;

  position: relative;
  /* display: inline-block; */
  cursor: pointer;
}

.tooltip {
  display: flex; 
  align-items: center;
  gap: 10px;
  width: 110px;
  text-align: center;
  position: absolute;
  top: 200%;
  left: 100%;
  transform: translateX(-50%);
  opacity: 0;
  visibility: hidden;
  background-color: #ffffff;
  color: #000000;
  padding: 10px;
  border-radius: 4px;
  border: 1px solid rgba(174, 182, 206, 0.2);
  box-shadow: 0 16px 30px 0 rgba(123, 127, 145, 0.2);
  transition: opacity 0.3s, visibility 0.3s, top 0.3s, background-color 0.3s;
  transition-delay: 200ms;
  z-index: 100;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.tab-item:hover .tooltip {

  top: 70%;
  opacity: 1;
  visibility: visible;
  background: #ffffff;
  transform: translate(-50%, -5px);
}

.hidden-tabs {
  display: flex;
  justify-content: space-between;
}

.pinned-tab-wrapp {
  display: flex;
  gap: 10px;
}

.delete-pinn {
  color: #ffffff;
  cursor: pointer;
  text-align: center;
  background-color: gray;
  width: 20px;height: 20px;
  border-radius: 50%;
}

